--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h5 class="card-title">Samlple 1</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Price</h6>
                 <p class="card-text">Description</p>
-                <a href="https://spartacodingclub.kr/" class="card-link stretched-link" target="_blank"></a>
+                <a href="#연결할 사이트 주소" class="card-link stretched-link" target="_blank"></a>
               </div>
             </div>
           </div>
@@ -42,7 +42,7 @@
                 <h5 class="card-title">Sample 2</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Price</h6>
                 <p class="card-text">Description</p>
-                <a href="https://spartacodingclub.kr/" class="card-link stretched-link" target="_blank"></a>
+                <a href="#연결할 사이트 주소" class="card-link stretched-link" target="_blank"></a>
               </div>
             </div>
           </div>
@@ -53,7 +53,7 @@
                 <h5 class="card-title">Sample 3</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Price</h6>
                 <p class="card-text">Description</p>
-                <a href="https://spartacodingclub.kr/" class="card-link stretched-link" target="_blank"></a>
+                <a href="#연결할 사이트 주소" class="card-link stretched-link" target="_blank"></a>
               </div>
             </div>
           </div>
