--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>3D 프린터 시범 사이트</title>
-    <link rel="stylesheet" href="#연결할 사이트 주소">
+    <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -31,7 +31,7 @@
                 <h5 class="card-title">Samlple 1</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Price</h6>
                 <p class="card-text">Description</p>
-                <a href="#연결할 사이트 주소" class="card-link stretched-link" target="_blank"></a>
+                <a href="#" class="card-link stretched-link" target="_blank"></a>
               </div>
             </div>
           </div>
@@ -42,7 +42,7 @@
                 <h5 class="card-title">Sample 2</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Price</h6>
                 <p class="card-text">Description</p>
-                <a href="#연결할 사이트 주소" class="card-link stretched-link" target="_blank"></a>
+                <a href="#" class="card-link stretched-link" target="_blank"></a>
               </div>
             </div>
           </div>
@@ -53,7 +53,7 @@
                 <h5 class="card-title">Sample 3</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Price</h6>
                 <p class="card-text">Description</p>
-                <a href="#연결할 사이트 주소" class="card-link stretched-link" target="_blank"></a>
+                <a href="#" class="card-link stretched-link" target="_blank"></a>
               </div>
             </div>
           </div>
