--- a/index.html
+++ b/index.html
@@ -24,39 +24,39 @@
     </div>
     <div class="container">
         <div class="row">
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img src="https://source.unsplash.com/1600x900/?rice-cooker" class="card-img-top" alt="Sample 1">
-              <div class="card-body">
-                <h5 class="card-title">Samlple 1</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Price</h6>
-                <p class="card-text">Description</p>
-                <a href="#" class="card-link stretched-link" target="_blank"></a>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                  <img src="https://source.unsplash.com/1600x900/?rice-cooker" class="card-img-top" alt="Sample 1">
+                  <div class="card-body">
+                    <h5 class="card-title">Sample 1</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Price</h6>
+                    <p class="card-text">Description</p>
+                    <a href="https://www.google.com/" class="card-link stretched-link" target="_blank"></a>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img src="https://source.unsplash.com/1600x900/?chair" class="card-img-top" alt="Sample 2">
-              <div class="card-body">
-                <h5 class="card-title">Sample 2</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Price</h6>
-                <p class="card-text">Description</p>
-                <a href="#" class="card-link stretched-link" target="_blank"></a>
+              <div class="col-md-4 mb-4">
+                <div class="card">
+                  <img src="https://source.unsplash.com/1600x900/?chair" class="card-img-top" alt="Sample 2">
+                  <div class="card-body">
+                    <h5 class="card-title">Sample 2</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Price</h6>
+                    <p class="card-text">Description</p>
+                    <a href="https://www.amazon.com/" class="card-link stretched-link" target="_blank"></a>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img src="https://source.unsplash.com/1600x900/?laptop" class="card-img-top" alt="Sample 3">
-              <div class="card-body">
-                <h5 class="card-title">Sample 3</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Price</h6>
-                <p class="card-text">Description</p>
-                <a href="#" class="card-link stretched-link" target="_blank"></a>
+              <div class="col-md-4 mb-4">
+                <div class="card">
+                  <img src="https://source.unsplash.com/1600x900/?laptop" class="card-img-top" alt="Sample 3">
+                  <div class="card-body">
+                    <h5 class="card-title">Sample 3</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Price</h6>
+                    <p class="card-text">Description</p>
+                    <a href="https://www.youtube.com/" class="card-link stretched-link" target="_blank"></a>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
         </div>
       </div>
       
